--- a/app/apply_blueprint/templates/layout.html
+++ b/app/apply_blueprint/templates/layout.html
@@ -1,4 +1,21 @@
 <html>
+  <head>
+    <script src="https://use.typekit.net/ssv8ypv.js"></script>
+    <script>try{Typekit.load({ async: true });}catch(e){}</script>
+    <style>
+      * {
+        font-family: "mr-eaves-modern", "Arial", "Helvetica Neue", "Helvetica, sans-serif";
+        font-size: 12pt;
+        margin-bottom: 1em;
+      }
+      H1 {
+        font-family: "mrs-eaves";
+        font-size: 42pt;
+        margin: 0;
+        margin-bottom: 19px;
+      }
+    </style>
+  </head>
   <body>
     {% block body %}{% endblock %}
   </body>
