--- a/app/apply_blueprint/templates/email_next_steps.html
+++ b/app/apply_blueprint/templates/email_next_steps.html
@@ -5,13 +5,16 @@
   Thank you for applying to {{ school.name }}! We look forward to getting to know you and your family better.
 </div>
 
+
 <div>
   We'd like to schedule
   {% if school.schedule_child_visit_url %}
-    a time for you to observe the school, a time for you to sit down have a conversation with our school leaders, and a time for your child to visit the classroom.
+    a time for you to observe the school, a time for you to sit down and have a conversation with our school leaders and a time for your child to visit the classroom.
   {% else %}
-    a time for you to observe the school and a time for you to sit down have a conversation with our school leaders.
+    a time for you to observe the school and a time for you to sit down and have a conversation with our school leaders.
   {% endif %}
+  We know choosing a learning environment for your child is a big decision. Through this process, you’ll have the opportunity to better understand Wildflower’s principles and practices, meet our teachers and ask any questions you may have.
+
 </div>
 
 <div>Your actions:</div>
@@ -34,12 +37,12 @@
       If you’ve already had your follow-up conversation, you don’t need to complete this step.
     </li>
   {% endif %}
-  {% if schedule_child_visit_url %}
+  {% if school.schedule_child_visit_url %}
     <li>
       {% if school.child_visit_optional %}
           (Optional)
       {% endif %}
-      Please <a href="{{ schedule_child_visit_url }}">click here</a> to schedule your child's visit.
+      Please <a href="{{ school.schedule_child_visit_url }}">click here</a> to schedule your child's visit.
       If your child has already visited, you don’t need to complete this step.
     </li>
   {% endif %}
