--- a/app/apply_blueprint/templates/layout.html
+++ b/app/apply_blueprint/templates/layout.html
@@ -4,15 +4,33 @@
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
     <style>
       * {
-        font-family: "mr-eaves-modern", "Arial", "Helvetica Neue", "Helvetica, sans-serif";
+        font-family: "mr-eaves-modern", sans-serif;
         font-size: 12pt;
         margin-bottom: 1em;
       }
       H1 {
-        font-family: "mrs-eaves";
+        font-family: "mrs-eaves", serif;
         font-size: 42pt;
         margin: 0;
         margin-bottom: 19px;
+      }
+      H2 {
+        font-family: "mrs-eaves", serif;
+        font-size: 24pt;
+        margin: 0;
+        margin-bottom: 12px;
+      }
+      H3 {
+        font-family: "mr-eaves", sans-serif;
+        font-size: 16pt;
+        margin: 0;
+        margin-bottom: 9px;
+      }
+      H4 {
+        font-family: "mr-eaves", sans-serif;
+        font-size: 14pt;
+        margin: 0;
+        margin-bottom: 9px;
       }
     </style>
   </head>
