--- a/app/apply_blueprint/templates/layout.html
+++ b/app/apply_blueprint/templates/layout.html
@@ -22,15 +22,16 @@
       }
       H3 {
         font-family: "mr-eaves", sans-serif;
-        font-size: 16pt;
+        font-size: 14pt;
         margin: 0;
-        margin-bottom: 9px;
+        margin-bottom: 7px;
       }
       H4 {
         font-family: "mr-eaves", sans-serif;
-        font-size: 14pt;
+        font-size: 12pt;
+        font-weight: bold;
         margin: 0;
-        margin-bottom: 9px;
+        margin-bottom: 6px;
       }
     </style>
   </head>
