--- a/app/apply_blueprint/templates/redirect_to_survey_monkey_with_guid.html
+++ b/app/apply_blueprint/templates/redirect_to_survey_monkey_with_guid.html
@@ -3,6 +3,6 @@
   <script>
     // Jacascript GUID https://gist.github.com/jed/982883
     function b(a){return a?(a^Math.random()*16>>a/4).toString(16):([1e7]+-1e3+-4e3+-8e3+-1e11).replace(/[018]/g,b)}
-    document.location = "https://www.surveymonkey.com/r/{{ survey_monkey_collector_id }}?response_guid=" + b()
+    document.location = "https://www.surveymonkey.com/r/{{ survey_monkey_collector_id }}?hub={{ hub }}&response_guid=" + b()
   </script>
 {% endblock %}
