--- a/app/apply_blueprint/templates/email_parent_wild_rose.html
+++ b/app/apply_blueprint/templates/email_parent_wild_rose.html
@@ -1,12 +1,28 @@
 {% extends "layout.html" %}
 {% block body %}
 
+
+{% set age_on_date = "9/1" %}
+
 <div>
   Thank you for applying to {{ school.name }}! We look forward to getting to know you and your family better.
 </div>
 
 <div>
-  We'd like to schedule a time for you to observe the school and to sit down with our school leaders for conversation.
+  {% set children_to_visit = [] %}
+  {% for child in children %}
+    {% if child.age_on(age_on_date) >= 5 %}
+      {% do children_to_visit.append(child) %}
+    {% endif %}
+  {% endfor %}
+
+  {% if children_to_visit|length == 0 %}
+    We'd like to schedule a time for you to observe the school and to sit down with our school leaders for conversation.
+  {% elif children_to_visit|length == 1 %}
+    We'd like to schedule a time for you to observe the school, a time to sit down with our school leaders for conversation, and a time for your child to visit.
+  {% elif children_to_visit|length > 1 %}
+    We'd like to schedule a time for you to observe the school, a time to sit down with our school leaders for conversation, and a time for your childen to visit.
+  {% endif %}
 
   We know choosing a learning environment for your child is a big decision. Through this process, you’ll have the opportunity to better understand Wildflower’s principles and practices, meet our teachers and ask any questions you may have.
 </div>
@@ -17,17 +33,20 @@
       Please <a href="{{ school.schedule_parent_observation_url }}">click here</a> to schedule your observation.
       If you’ve already observed, you don’t need to complete this step.
     </li>
-    {% for child in children %}
-      <li>
-        {% if child.age_on("9/1") < 7 }
-          {% set visit_url = "https://calendly.com/wild-rose-appointments/child-visit-half-day" %}
-        {% else %}
-          {% set visit_url = "https://calendly.com/wild-rose-appointments/child-visit-full-day" %}
-        {% endif %}
-        Please <a href="visit_url">click here</a> to schedule a visit for {{ child.first_name}} {{ child.last_name }}.
-        Please schedule the date of the visit to be after the date of your observation.
-        If you’ve already observed, you don’t need to complete this step.
-      </li>
+
+    {% for child in children_to_visit %}
+      {% if child.age_on(age_on_date) >= 5 %}
+        <li>
+          {% if child.age_on(age_on_date) < 7 %}
+            {% set visit_url = "https://calendly.com/wild-rose-appointments/child-visit-half-day" %}
+          {% else %}
+            {% set visit_url = "https://calendly.com/wild-rose-appointments/child-visit-full-day" %}
+          {% endif %}
+          Please <a href="{{ visit_url }}">click here</a> to schedule a visit for {{ child.first_name}} {{ child.last_name }}.
+          Please schedule the date of the visit to be after the date of your observation.
+          If {{ child.first_name}} has already visited, you don’t need to complete this step.
+        </li>
+      {% endif %}
     {% endfor %}
 
 </ol>
