--- a/app/apply_blueprint/templates/email_parent.html
+++ b/app/apply_blueprint/templates/email_parent.html
@@ -24,7 +24,7 @@
       {% if school.parent_observation_optional %}
           (Optional)
       {% endif %}
-      Please <a href="{{ school.schedule_parent_observation_url }}">click here</a> to schedule your observation.
+      Please <a href="{{ school.schedule_parent_observation_url }}">click here</a> to schedule your parent observation.
       If you’ve already observed, you don’t need to complete this step.
     </li>
   {% endif %}
