--- a/app/apply_blueprint/templates/email_parent_wild_rose.html
+++ b/app/apply_blueprint/templates/email_parent_wild_rose.html
@@ -17,11 +17,11 @@
   {% endfor %}
 
   {% if children_to_visit|length == 0 %}
-    We'd like to schedule a time for you to observe the school and sit down with our school leaders for conversation.
+    We'd like to schedule a time for you to observe the school and sit down with our school leaders for a conversation.
   {% elif children_to_visit|length == 1 %}
-    We'd like to schedule a time for you to observe the school and sit down with our school leaders for conversation, and a time for your child to visit.
+    We'd like to schedule a time for you to observe the school and sit down with our school leaders for a conversation, and a time for your child to visit.
   {% elif children_to_visit|length > 1 %}
-    We'd like to schedule a time for you to observe the school and sit down with our school leaders for conversation, and a time for your children to visit.
+    We'd like to schedule a time for you to observe the school and sit down with our school leaders for a conversation, and a time for your children to visit.
   {% endif %}
 
   We know choosing a learning environment for your child is a big decision. Through this process, you’ll have the opportunity to better understand Wildflower’s principles and practices, meet our teachers and ask any questions you may have.
