--- a/app/apply_blueprint/templates/after_survey_monkey.html
+++ b/app/apply_blueprint/templates/after_survey_monkey.html
@@ -5,7 +5,7 @@
 <h1>Congratulations!</h1>
 
 <div>
-  You have completed you application for:
+  You have completed your application for:
 
   {% for child in application.children %}
     <div style="margin-top: 1em; margin-left: 1em; margin-bottom: 0">{{ child.first_name }} {{ child.last_name }}</div>
