--- a/app/apply_blueprint/templates/email_parent.html
+++ b/app/apply_blueprint/templates/email_parent.html
@@ -34,6 +34,7 @@
           (Optional)
       {% endif %}
       Please <a href="{{ school.schedule_parent_teacher_conversation_url }}">click here</a> to schedule your follow-up conversation.
+      Please schedule this appointment to follow your parent observation appointment.
       If you’ve already had your follow-up conversation, you don’t need to complete this step.
     </li>
   {% endif %}
