--- a/app/apply_blueprint/templates/layout.html
+++ b/app/apply_blueprint/templates/layout.html
@@ -4,31 +4,27 @@
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
     <style>
       * {
-        font-family: "mr-eaves-modern", sans-serif;
-        font-size: 12pt;
+        font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+        font-size: 10pt;
         margin-bottom: 1em;
       }
       H1 {
-        font-family: "mrs-eaves", serif;
-        font-size: 42pt;
+        font-size: 38pt;
         margin: 0;
         margin-bottom: 19px;
       }
       H2 {
-        font-family: "mrs-eaves", serif;
-        font-size: 24pt;
+        font-size: 20pt;
         margin: 0;
         margin-bottom: 12px;
       }
       H3 {
-        font-family: "mr-eaves", sans-serif;
-        font-size: 14pt;
+        font-size: 12pt;
         margin: 0;
         margin-bottom: 7px;
       }
       H4 {
-        font-family: "mr-eaves", sans-serif;
-        font-size: 12pt;
+        font-size: 10pt;
         font-weight: bold;
         margin: 0;
         margin-bottom: 6px;
