--- a/app/apply_blueprint/templates/email_parent_wild_rose.html
+++ b/app/apply_blueprint/templates/email_parent_wild_rose.html
@@ -43,7 +43,7 @@
           to schedule a half-day class visit for {{ child.first_name}}.  This is a great way to experience a typical day at Wild Rose.
         {% else %}
           Please <a href="https://calendly.com/wild-rose-appointments/child-visit-after-school">click here</a>
-          to schedule a half-hour visit for {{ child.first_name}} to meet our teachers when school is not in session.
+          to schedule a fifteen minute visit for {{ child.first_name}} to meet our teachers when school is not in session.
         {% endif %}
         If {{ child.first_name}} has already visited, you don’t need to complete this step.
       </li>
