--- a/app/apply_blueprint/templates/email_parent_wild_rose.html
+++ b/app/apply_blueprint/templates/email_parent_wild_rose.html
@@ -14,7 +14,7 @@
     a visit for each of your children.
   {% endif %}
 
-  The parent visit is a time for you to observe the classroom and to sit down and have a conversation with our school leaders.
+  The parent visit is a time for you to observe the classroom and have a conversation with our school leaders.
   The student visit is a time for your child to visit the classroom.
 </div>
 
@@ -59,7 +59,7 @@
 {% endif %}
 
 
-<div>Best,</div>
+<div>Warmly,</div>
 
 <div>{{ school.name }}<div>
 
