--- a/app/apply_blueprint/templates/redirect_to_survey_monkey_with_guid.html
+++ b/app/apply_blueprint/templates/redirect_to_survey_monkey_with_guid.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "apply_layout.html" %}
 {% block body %}
   <script>
     // Jacascript GUID https://gist.github.com/jed/982883
