modified order of authentication/flow

--- a/app/qbo_blueprint/templates/charts_of_accounts.html
+++ b/app/qbo_blueprint/templates/charts_of_accounts.html
@@ -5,7 +5,7 @@
   {% if f.mimeType == "application/vnd.google-apps.folder" %}
     <a href="{{ url_for(blueprint_name + ".charts_of_accounts", id = f.id)}}"> 📁
   {% elif f.mimeType == "application/vnd.google-apps.spreadsheet" %}
-    <a href="{{ url_for(blueprint_name + ".set_chart_of_accounts", id = f.id) }}"> 🌱
+    <a href="{{ url_for(blueprint_name + ".set_chart_of_accounts", sheet_id = f.id) }}"> 🌱
   {% endif %}
   {{ f.name }}
   </a>
